# redox-base

./: Cargo.lock.x  Cargo.toml  README.md  aarch64-unknown-redox-clif.json  build-initfs-cranelift.sh  build-simple-coreutils.sh  build-simple-ls.sh  init.rc  rust-toolchain.toml
.cargo/: config.toml
aarch64-unknown-redox/: init_drivers.rc
audiod/: Cargo.toml
audiod/src/: main.rs
bootstrap/: Cargo.toml  build-cranelift.sh
bootstrap/src/: exec.rs  initfs.rs  lib.rs  procmgr.rs  start.rs
curl/: Cargo.toml  build-curl-dynamic.sh  build-curl.sh
curl/src/: main.rs
daemon/: Cargo.toml
daemon/src/: lib.rs
debug-argv/: Cargo.toml
debug-argv/src/: main.rs
dns-test/: Cargo.toml  build.sh  notes.md
dns-test/src/: main.rs
drivers/: README.md  initfs.toml
drivers/acpid/: Cargo.toml
drivers/acpid/src/: main.rs
drivers/audio/ac97d/: Cargo.toml
drivers/audio/ac97d/src/: main.rs
drivers/audio/ihdad/: Cargo.toml
drivers/audio/ihdad/src/: main.rs
drivers/audio/sb16d/: Cargo.toml
drivers/audio/sb16d/src/: main.rs
drivers/common/: Cargo.toml
drivers/common/src/: lib.rs  logger.rs
drivers/fs/virtio-9pd/: Cargo.toml  config.toml
drivers/fs/virtio-9pd/src/: client.rs  main.rs  protocol.rs  scheme.rs
drivers/graphics/bgad/: Cargo.toml
drivers/graphics/bgad/src/: main.rs
drivers/graphics/driver-graphics/: Cargo.toml
drivers/graphics/driver-graphics/src/: lib.rs  objects.rs
drivers/graphics/fbbootlogd/: Cargo.toml
drivers/graphics/fbbootlogd/src/: main.rs  scheme.rs
drivers/graphics/fbcond/: Cargo.toml
drivers/graphics/fbcond/src/: display.rs  main.rs  scheme.rs
drivers/graphics/graphics-ipc/: Cargo.toml
drivers/graphics/graphics-ipc/src/: v2.rs
drivers/graphics/ihdgd/: Cargo.toml
drivers/graphics/ihdgd/src/: main.rs
drivers/graphics/vesad/: Cargo.toml
drivers/graphics/vesad/src/: main.rs  scheme.rs
drivers/graphics/virtio-gpud/: Cargo.toml
drivers/graphics/virtio-gpud/src/: main.rs  scheme.rs
drivers/hwd/src/: main.rs
drivers/hwd/src/backend/: acpi.rs  mod.rs
drivers/input/ps2d/: Cargo.toml
drivers/input/ps2d/src/: main.rs
drivers/input/usbhidd/: Cargo.toml
drivers/input/usbhidd/src/: main.rs
drivers/inputd/: Cargo.toml
drivers/inputd/src/: lib.rs  main.rs
drivers/net/alxd/: Cargo.toml
drivers/net/alxd/src/: main.rs
drivers/net/driver-network/: Cargo.toml
drivers/net/driver-network/src/: lib.rs
drivers/net/e1000d/: Cargo.toml
drivers/net/e1000d/src/: main.rs
drivers/net/ixgbed/: Cargo.toml
drivers/net/ixgbed/src/: main.rs
drivers/net/rtl8139d/: Cargo.toml
drivers/net/rtl8168d/: Cargo.toml
drivers/net/virtio-netd/: Cargo.toml
drivers/pcid/: Cargo.toml
drivers/pcid-spawner/: Cargo.toml
drivers/pcid-spawner/src/: main.rs
drivers/pcid/src/: main.rs
drivers/redoxerd/: Cargo.toml
drivers/redoxerd/src/: main.rs  sys.rs
drivers/rtcd/src/: main.rs
drivers/storage/ahcid/: Cargo.toml
drivers/storage/bcm2835-sdhcid/: Cargo.toml
drivers/storage/driver-block/: Cargo.toml
drivers/storage/ided/: Cargo.toml
drivers/storage/lived/: Cargo.toml
drivers/storage/nvmed/: Cargo.toml
drivers/storage/usbscsid/: Cargo.toml
drivers/storage/virtio-blkd/: Cargo.toml
drivers/usb/usbhubd/: Cargo.toml
drivers/usb/xhcid/: Cargo.toml
drivers/vboxd/: Cargo.toml
drivers/vboxd/src/: main.rs
drivers/virtio-core/: Cargo.toml
drivers/virtio-core/src/: probe.rs  transport.rs
init/src/: main.rs
initfs/tools/: Cargo.toml
ipcd/: Cargo.toml
ipcd/src/: main.rs
ipcd/src/uds/: dgram.rs  mod.rs  stream.rs
logd/: Cargo.toml
logd/src/: main.rs  scheme.rs
netstack/: Cargo.toml
netstack/src/: logger.rs  main.rs
netstack/src.idk/: logger.rs  main.rs
netstack/src.idk/link/: ethernet.rs
netstack/src.idk/router/: mod.rs
netstack/src.idk/scheme/: tcp.rs
netstack/src.old/: main.rs
netstack/src.old/scheme/: mod.rs
netstack/src/link/: ethernet.rs
netstack/src/router/: mod.rs
netstack/src/scheme/: mod.rs  socket.rs  tcp.rs  udp.rs
netstack/src/scheme/netcfg/: mod.rs
netstack/src/smolnetd/scheme/: ip.rs
ptyd/: Cargo.toml
ptyd/src/: main.rs  pty.rs
ramfs/: Cargo.toml
ramfs/src/: main.rs
randd/: Cargo.toml
randd/src/: main.rs
readdir-bench/: Cargo.toml  build.sh
readdir-bench/src/: main.rs
redox-initfs-ar/: Cargo.toml
redox-initfs-ar/src/: main.rs
redox-scheme/: Cargo.toml  Cargo.toml.orig
redox-scheme/src/: lib.rs  scheme.rs  wrappers.rs
rust/: .gitmodules
rust/compiler/rustc_session/: Cargo.toml
rust/src/bootstrap/: configure.py
rustc_codegen_cranelift/example/: std_example.rs
rustc_codegen_cranelift/src/: common.rs  global_asm.rs
simple-coreutils/: Cargo.toml
simple-coreutils/src/: cat.rs  chmod.rs  cp.rs  echo.rs  head.rs  less.rs  ln.rs  mkdir.rs  more.rs  pwd.rs  rm.rs  sleep.rs  sync.rs  tail.rs  test-mtime.rs  touch.rs  wc.rs
simple-edit/: Cargo.toml
simple-edit/src/: main.rs
simple-file/: Cargo.toml
simple-file/src/: main.rs
simple-ls/: Cargo.toml
simple-ls/src/: main.rs
simple-pkg/: Cargo.toml  build-pkg.sh
simple-pkg/src/: main.rs
src/: aarch64.rs  base.rs  exec.rs  filesystem.rs  i686.asm  i686.ld  i686.rs  initfs.rs  lib.rs  main.rs  procmgr.rs  procmngr.rs  scheme.rs  start.rs  types.rs  x86_64.asm  x86_64.ld  x86_64.rs
src/abi/: mod.rs
src/dnsd/: main.rs  scheme.rs
src/driver/: aot.rs
src/intrinsics/: mod.rs
src/lib/: error.rs  lib.rs
src/smolnetd/: main.rs
src/smolnetd/link/: ethernet.rs
src/smolnetd/scheme/: icmp.rs  socket.rs  udp.rs
sync/: Cargo.toml
sync/src/: main.rs
test-9p/: Cargo.toml
test-9p/src/: main.rs
test-mode/: Cargo.toml
test-mode/src/: main.rs
tests/: archive_and_read.rs
tools/: Cargo.toml
tools/src/: archive_common.rs
utils/: Cargo.toml
utils/src/: redox_initfs_package.rs
xscheme-test/: Cargo.toml
xscheme-test/src/: main.rs
zerod/: Cargo.toml
zerod/src/: main.rs
(+31 files in other folders)
