[package]
name = "bootstrap"
version = "0.0.0"
authors = ["4lDO2 <4lDO2@protonmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "bootstrap"
crate-type = ["staticlib"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
goblin = { version = "0.4", default-features = false, features = ["elf32", "elf64"] }
libc = "0.2"
memoffset = "0.6"
scroll = { version = "0.10", default-features = false }
linked_list_allocator = "0.9"
redox_syscall = { git = "https://gitlab.redox-os.org/4lDO2/syscall.git", branch = "userspace_fexec" }

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
