[workspace]

[package]
name = "curl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "curl"
path = "src/main.rs"

[dependencies]
# Use ureq with std networking but no TLS (ring requires C dependencies)
ureq = { version = "2", default-features = false, features = ["std"] }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
