[workspace]

[package]
name = "curl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "curl"
path = "src/main.rs"

[dependencies]
# Use ureq with HTTP only (TLS disabled until C deps work on Redox)
ureq = { version = "2", default-features = false, features = ["http"] }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
