[workspace]

[package]
name = "simple-pkg"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pkg"
path = "src/main.rs"

[dependencies]
# No TLS - use HTTP only or local files
ureq = { version = "2", default-features = false }
tar = "0.4"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
