[workspace]

[package]
name = "simple-pkg"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "pkg"
path = "src/main.rs"

[dependencies]
# HTTPS support via pure-Rust rustls-rustcrypto
ureq = { version = "3", default-features = false, features = ["rustls-no-provider", "gzip"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
rustls-rustcrypto = "0.0.2-alpha"

tar = "0.4"
flate2 = "1.0"
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = "s"
lto = false
panic = "abort"
